--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\carlo\Documents\1Carlomentos\1Programacion\10Otros Proyectos\Bookites\img\logo.ico,0
+IconResource=C:\Users\carlo\Documents\1Carlomentos\1Programacion\10Otros Proyectos\Bookites [CSS & SASS]\img\logo.ico,0
 [ViewState]
 Mode=
 Vid=
